# multiload-nandhp

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  generate-about-data-header.pl
debian/: changelog  control  multiload-nandhp-common.install  multiload-nandhp-lxpanel.install  multiload-nandhp-xfce4.install  rules
lxpanel/: Makefile.am  lxpanel-multiload-plugin.c
multiload/: Makefile.am  autoscaler.h  linux-proc.c  load-graph.c  load-graph.h  multiload.c  multiload.h  netspeed.c  netspeed.h  properties.c  properties.h
po/: POTFILES.in  POTFILES.skip  cs.po
xfce4/: Makefile.am  multiload.desktop.in  multiload.desktop.in.in  xfce4-multiload-dialogs.c  xfce4-multiload-dialogs.h  xfce4-multiload-plugin.c  xfce4-multiload-plugin.h  xfce4-multiload-settings.c  xfce4-multiload-settings.h
